# dashi

./: Cargo.toml  README.md  TODO.md  installer.sh
.github/workflows/: deploy.yml
pkg/: 30-bluetooth.rules  90-backlight.rules  91-leds.rules
src/: daemon.rs  io.rs  main.rs  notify.rs
src/command/: backlight.rs  bluetooth.rs  bookmark.rs  brightness.rs  mod.rs  nightshift.rs  power.rs  volume.rs
