[package]
name = "dashi"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.49", features = ["derive"] }
pulse = { version = "2.30.1", package = "libpulse-binding" }
serde = { version = "1.0.143", features = ["derive"] }
serde_json = "1.0.143"
notify-rust = { version = "4.11.7" }
dirs = "6.0.0"
color-eyre = "0.6.5"
zbus = "5.12.0"
